# tracer

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  llms.txt  pyproject.toml  request.json  test_load_safety.py  test_metrics.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  model_proposal.yml
.github/workflows/: ci.yml  pr-gate.yml  release.yml
benchmarks/: batching_throughput.py
docs/: api.md  artifacts.md  cli.md  cloud.md  cold_start.md  concepts.md  highthroughput.md  javascript.md  troubleshooting.md  watch.md
js/: README.md  package-lock.json  package.json  tsconfig.json
js/src/: index.ts
js/test/: watch.test.ts
notebooks/: 01-quickstart.ipynb  02-static-tracer.ipynb  03-dynamic-tracer.ipynb  04-getting-started.ipynb
src/tracer/: __init__.py  api.py  config.py  scanner.py  types.py  watch.py
src/tracer/analysis/: __init__.py  html_report.py  qualitative.py  sankey.py
src/tracer/benchmarks/embedders/: embedders.py  outputs.txt  requirements.txt  run.sh
src/tracer/cli/: _ui.py  main.py
src/tracer/cloud/: __init__.py  cli.py  client.py
src/tracer/embeddings/: embedder.py  index.py
src/tracer/fit/: __init__.py  ood.py  pipeline.py  surrogate.py
src/tracer/policy/: artifacts.py
src/tracer/runtime/: batching.py  router.py  serve.py
src/tracer/traces/: __init__.py  loader.py  watch_export.py
tests/: test_batching.py  test_bugfixes.py  test_cloud_cli.py  test_cloud_client.py  test_embedder.py  test_fastembed.py  test_fit.py  test_gate.py  test_lazy_init.py  test_ood.py  test_router.py  test_scan.py  test_serve.py  test_watch.py  test_watch_export.py
