[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracer-llm"
dynamic = ["version"]
description = "TRACER: Trace-Based Adaptive Cost-Efficient Routing. Turn LLM traces into parity-gated routing policies - cut 90%+ of LLM calls with formal guarantees."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = [
    "llm", "routing", "surrogate", "cost-reduction", "learn-to-defer",
    "conformal-prediction", "machine-learning", "explainability", "xai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ── Core dependencies ──────────────────────────────────────────────────────────
# These are the only packages required for the core fit/route/update workflow.
# Embedding generation requires an optional extra (see below).
dependencies = [
    "numpy>=1.21,<2.1",
    "scikit-learn>=1.0",
    "joblib>=1.1",
]

# ── Optional dependency groups ─────────────────────────────────────────────────
# Each group is installed with:  pip install tracer-llm[<group>]
#
# TRACER supports multiple embedding backends.  Choose the one that fits your
# deployment constraints:
#
#   [embeddings]  – PyTorch-based (sentence-transformers).  Best GPU support.
#   [fastembed]   – ONNX-based (FastEmbed).  No PyTorch, ~2x faster on CPU.
#                    Lighter cold start, ideal for serverless/Lambda.
#   [faiss]       – FAISS index for qualitative analysis (optional).
[project.optional-dependencies]

# PyTorch-based embedding backend.
# Includes the full sentence-transformers library and its PyTorch dependency.
# Best choice when you have a GPU or already use PyTorch in your stack.
embeddings = [
    "sentence-transformers>=2.2,<5",
    "torch>=2.0",
    "numpy>=1.21,<2.1",
]

# ONNX-based embedding backend (no PyTorch).
# FastEmbed uses pre-quantized ONNX models and ONNX Runtime for CPU-first
# inference.  Eliminates the ~2 GB PyTorch install.  Typically 1.7–3.3×
# faster on CPU than sentence-transformers for the same base model.
# Install with:  pip install tracer-llm[fastembed]
fastembed = ["fastembed>=0.3.0"]

faiss = ["faiss-cpu>=1.7"]
notebooks = [
    "faiss-cpu>=1.7",
    "sentence-transformers>=2.2,<5",
    "torch>=2.0",
    "numpy>=1.21,<2.1",
    "pandas>=1.4",
    "matplotlib>=3.5",
    "datasets>=2.0",
    "huggingface_hub>=0.14",
]
viz = ["plotly>=5.0", "kaleido>=0.2"]
xgboost = ["xgboost>=1.7"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

# "Batteries included" install: all optional features.
# Includes both embedding backends so users can choose at runtime.
all = [
    # Embedding backends
    "sentence-transformers>=2.2,<5",
    "torch>=2.0",
    "numpy>=1.21,<2.1",
    "fastembed>=0.8.0",          # <-- Added: ONNX backend, no PyTorch required
    # Optional components
    "faiss-cpu>=1.7",
    "xgboost>=1.7",
    "plotly>=5.0",
    "kaleido>=0.2",
    "pandas>=1.4",
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/adrida/tracer"
Repository = "https://github.com/adrida/tracer"
Documentation = "https://github.com/adrida/tracer#readme"
"Bug Tracker" = "https://github.com/adrida/tracer/issues"

[project.scripts]
tracer = "tracer.cli.main:main"

[tool.hatch.version]
path = "src/tracer/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tracer"]

[tool.pytest.ini_options]
testpaths = ["tests"]